<resources>
    <string name="app_name">ToDoListApp</string>

    <!-- ToDoFragment -->
    <string name="hello_user">Hello, %1$s</string>

    <!-- Dialog Add/Edit Todo -->
    <string name="new_todo">New To-do</string>
    <string name="edit_todo">Edit To-do</string>
    <string name="add_icon">Add Icon</string>
    <string name="todo_label">To-do</string>
    <string name="task_hint">Task</string>
    <string name="label_text">Label</string>
    <string name="description_label">Description</string>
    <string name="add_description_hint">Add description</string>
    <string name="set_deadline">Set Deadline</string>
    <string name="select_date">Select Date</string>
    <string name="select_time">Select Time</string>
    <string name="create_button">Create</string>
    <string name="update">Update</string>

    <!-- Pesan Error & Toast -->
    <string name="task_name_empty_error">Task name cannot be empty!</string>
    <string name="task_added">Task added</string>
    <string name="task_add_failed">Failed to add task</string>
    <string name="task_updated">Task updated</string>
    <string name="task_update_failed">Failed to update task</string>
    <string name="task_status_updated">Task status updated</string>
    <string name="task_status_update_failed">Failed to update status</string>
    <string name="task_deleted">Task deleted</string>
    <string name="task_delete_failed">Failed to delete task</string>

    <!-- Dialog Konfirmasi Hapus -->
    <string name="delete_task_title">Delete Task</string>
    <string name="delete_task_confirmation">Are you sure you want to delete this task?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="edit" />

</resources>
